--- a/Restaurant_Project/css/mine.css
+++ b/Restaurant_Project/css/mine.css
@@ -25,8 +25,9 @@ header {
     text-shadow: 2px 2px 10px black;
 }
 
-footer {
+.navbar-footer {
     position: absolute;
+    bottom: 0;
     text-align: center;
     color: #fdfffd;
     text-shadow: 2px 2px 10px black;
